builder/css/style.css
/* List of Supremes */
.supremes-list {
    background-color: #EEEEEE;
}

.supreme-list-element {
    height: 200px;
    border-width: 1px;
    border-color: #777777;
    border-style: solid;
    padding: 0px;
    background-color: #DDDDDD;
    background:  linear-gradient(#BBBBBB, #DDDDDD 15%, #FFFFFF 25%);
    color: #000000;
	position: relative;
}

.supreme-list-element .bottom-footer {
    position:absolute; 
    bottom:0px;
	width:100%;
}

.supreme-list-element .supreme-additional-data {
	margin-right: 3px;	
}

img.supreme-freelance {
	margin-top: 0px;
	height: 14px;
}

.footer-buttons {
	position: absolute;
	bottom: 2px;
	right: 2px;
}

.header .supreme-name {
    float: none; 
    width: auto;
	overflow: hidden;
    height: 50px;
    margin-left: 3px;
    font-size: 16;
    font-weight: bold;
    text-align: center;
}

.header {
	height: auto;
	overflow: hidden;
}

.header .info-icons {
    width: 27px;
	float: right;
}

.header .supreme-thumbnail {
	width: 40px;
	float: left;
}

/* Header on the modal view */
.modal-header {
    background:  linear-gradient(#BBBBBB, #DDDDDD 45%, #FFFFFF 90%);    
}

.header-modal .supreme-name {
    float: none; 
    width: auto;
	overflow: hidden;
    height: 50px;
    margin-left: 3px;
    font-size: 28;
    font-weight: bold;
    text-align: center;
}

.header-modal .supreme-thumbnail {
	width: 60px;
	float: left;
}

/* Elements from the Modal view */
.modal-body .info-icons {
    width: 27px;
	float: right;
}

.table-traits {
    margin-left: auto;
    margin-right: auto;
}

.traits-value {
    text-align: center;
    font-size: 23;
    padding: 0px 7px;
}

.traits-separator {
    background: #000000;
}

.traits-trump-1 {
    background: #DE0F0F;
    color: #DADADA;
}

.informations-left-modal {
    float: left;
}

.exclusive-minion-name {
    font-weight: bold;
}

.supreme-description {
    margin-left: 20px;
    margin-right: 20px;
    margin-top: 5px;
    padding: 10px;
    background-color: #D5D5D5;
    border: 1px solid #7F7F7F;
    
}
.supreme-description-powers {
    font-weight: bold;
    text-align: right;
    margin-left: 40px;
}

.supreme-description-content {
    margin-top: 6px;
    font-style: italic;
    text-align: center;
}

.supreme-links {
	margin-top: 10px;
}

/* Icons */
.info-icon {
    height: 25px; 
    width: 25px; 
    margin-top:2px;
    margin-bottom: 0px;
    margin-left: 0px;
    margin-right: 1px;
    background-position: right top;
    background-size: 25px 25px;
    background-repeat: no-repeat;
    background-origin: content-box;
}

.icon-element {
    height: 20px; 
    width: 20px; 
    margin-left: 6px;
}

/* Selected supremes */
.supremes-selected-list {
    background-color: #EEEEEE;
}

.supremes-selected-list .section-title {
	text-align: center;
	font-size: 18;
	font-weight: bold;
}

.supremes-selected-list .btn-toolbar {
	margin-top: 2px;
	margin-bottom: 3px;
}

.supreme-selected-list-element {
    border-width: 1px;
    border-color: #777777;
    border-style: solid;
    padding: 0px;
    background-color: #DDDDDD;
    background: linear-gradient(#BBBBBB, #DDDDDD 15%, #FFFFFF 25%);
    color: #000000;
	position: relative;
}

.footer-icon {
    height: 20px; 
    width: 20px; 
    margin-top:0px;
    margin-bottom: 0px;
    margin-left: 2px;
    margin-right: 0px;
    background-position: left top;
    background-size: 20px 20px;
    background-repeat: no-repeat;
    background-origin: content-box;
	display: inline-block;
}

/* Supreme Role & Level */
.supreme-role {
	margin-left: 2px;
	font-weight: bold;
}

.supreme-role .role-level-1 {
	font-weight: normal;
}

.supreme-role .role-level-2 {
	font-weight: bold;
}

.supreme-role .role-level-3 {
	font-weight: bolder;
}

/* Supreme Origin */
.supreme-origin-mystery {
    background-image: url("../img/origin_mystery.png");
    border-color: #D00;
}

.supreme-origin-science {
    background-image: url("../img/origin_science_shadowed.png");
    border-color: #F8C70D;
}

.supreme-origin-nature {
    background-image: url("../img/origin_nature.png");
    border-color: #0050DD;
}

/* Hero or Villain ? */
.hero-villain-10 {
    background-image: url("../img/hero.png");
}
.hero-villain-01 {
    background-image: url("../img/villain.png");
}
.hero-villain-11 {
    background-image: url("../img/herovillain.png");
}

/* Supreme factions */
.faction-arc {
	color: #804010;
}
.faction-bloodwatch {
	color: #A02820;
}
.faction-coven {
	color: #8028E0;
}
.faction-forgotten{
	color: #708090;
}
.faction-grimm {
	color: #A05030;
}
.faction-heavymetal{
	color: #0000FF;
}
.faction-infinitehourglass{
	color: #B08800;
}
.faction-jadecult{
	color: #006000;
}
.faction-necroplane{
	color: #800080;
}
.faction-otherside{
	color: #008080;
}
.faction-settlersgreen{
	color: #208820;
}
.faction-starmarshals{
	color: #000080;
}
.faction-supremealliance{
	color: #B02020;
}
.faction-theway{
	color: #FF4000;
}
.faction-ulthar{
	color: #2090FF;
}

.team-summary dl{
	margin-bottom: 0px;
}
.team-summary-exclusiveminions {
	font-weight: bold;
	margin-left: 15px;
}

/* Faction card */
.faction-card {
	margin-bottom: 6px;
	margin-top: 4px;
	padding: 5px;
}

.clear-both {
    clear: both;
}

